Flattened directory structure for blocks

--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title></title>
 
-<link rel="stylesheet" type="text/css" href="style/main.css"/>
+<link rel="stylesheet" type="text/css" href="main.css"/>
 
 <body>
     
 </body>
 
-<script src="script/d3.min.js" charset="utf-8"></script>
-<script src="script/d3-jetpack.js" charset="utf-8"></script>
-<script src="script/underscore-min.js" charset="utf-8"></script>
-<script src="script/main.js" charset="utf-8"></script>
+<script src="d3.min.js" charset="utf-8"></script>
+<script src="d3-jetpack.js" charset="utf-8"></script>
+<script src="underscore-min.js" charset="utf-8"></script>
+<script src="main.js" charset="utf-8"></script>
 
 </html>
