Use CDNs for vendor libraries

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     
 </body>
 
-<script src="d3.min.js" charset="utf-8"></script>
-<script src="d3-jetpack.js" charset="utf-8"></script>
-<script src="underscore-min.js" charset="utf-8"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js" charset="utf-8"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js" charset="utf-8"></script>
+<script src="//cdn.rawgit.com/gka/d3-jetpack/master/d3-jetpack.js" charset="utf-8"></script>
 <script src="main.js" charset="utf-8"></script>
 
 </html>
