--- a/index.html
+++ b/index.html
@@ -1,18 +1,12 @@
 <!DOCTYPE html>
-<html>
 <meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title></title>
 
-<link rel="stylesheet" type="text/css" href="main.css"/>
+<style>
+</style>
 
-<body>
-    
-</body>
+<body></body>
 
-<script src="//cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js" charset="utf-8"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js" charset="utf-8"></script>
-<script src="//cdn.rawgit.com/gka/d3-jetpack/master/d3-jetpack.js" charset="utf-8"></script>
-<script src="main.js" charset="utf-8"></script>
+<script src="//d3js.org/d3.v4.0.0-alpha.35.min.js" charset="utf-8"></script>
+<script>
 
-</html>
+</script>
