updating to latest alpha of d3 v4

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <body></body>
 
-<script src="//d3js.org/d3.v4.0.0-alpha.35.min.js" charset="utf-8"></script>
+<script src="https://d3js.org/d3.v4.0.0-alpha.50.min.js"></script>
 <script>
 
 </script>
