--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <body></body>
 
-<script src="https://d3js.org/d3.v4.0.0-alpha.50.min.js"></script>
+<script src="https://d3js.org/d3.v4.min.js"></script>
 <script>
 
 </script>
