--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title></title>
+<title>Hi</title>
 
 <link rel="stylesheet" type="text/css" href="style/main.css"/>
 
