--- a/index.html
+++ b/index.html
@@ -4,15 +4,13 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title></title>
 
-<link rel="stylesheet" type="text/css" href="style/main.css"/>
+<link rel="stylesheet" type="text/css" href="style.css"/>
 
 <body>
     
 </body>
 
-<script src="script/d3.min.js" charset="utf-8"></script>
-<script src="script/d3-jetpack.js" charset="utf-8"></script>
-<script src="script/underscore-min.js" charset="utf-8"></script>
-<script src="script/main.js" charset="utf-8"></script>
+<script src="https://d3js.org/d3.v4.min.js"></script>
+<script src="script.js" charset="utf-8"></script>
 
 </html>
